--- a/src/app/Game/Game.module.scss
+++ b/src/app/Game/Game.module.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
     height: 100vh;
     background-color: #282c34;
     color: white;
