--- a/src/components/Puzzle/Board/Board.module.scss
+++ b/src/components/Puzzle/Board/Board.module.scss
@@ -1,5 +1,5 @@
 .border{
-    border: 1px solid black;
+    border: 15px solid brown;
     width: 80%;
     margin: 0 auto;
     .board{
@@ -12,7 +12,7 @@
         div{
             height: 100%;
             width: 100%;
-            background-color: white;
+            background-color: #7c7c7c;
         }
     }
 }
