--- a/src/app/Game/Game.module.scss
+++ b/src/app/Game/Game.module.scss
@@ -1,3 +1,6 @@
+$BNAblue: #005e85;
+$BNAlightBlue: #23abe0;
+
 .Page{
     display: flex;
     flex-direction: column;
@@ -6,23 +9,42 @@
     max-width: 1080px;
     margin: 0 auto;
     height: 100dvh;
-    background-color: #282c34;
     color: white;
     position: relative;
     overflow: hidden;
     header{
         display: flex;
         justify-content: space-between;
-        width: 80%;
+        width: 75%;
         margin-bottom: 50px;
         div{
-            padding: 20px 60px;
-            background-color: red;
-            border-radius: 20px;
+            &.logo{
+                background-color: transparent;
+                padding: 0;
+                width: 20%;
+                img{
+                    width: 100%
+                }
+            }
+            &.clock{
+                width: 160px;
+                background-color: $BNAlightBlue;
+                border-radius: 60px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    width: 30px;
+                    margin-right: 10px;
+                }
+                span{
+                    font-size: 2rem;
+                }
+            }
         }
     }
     .table{
         display: grid;
-        width: 80%;
+        width: 75%;
     }
 }
