--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+$BNAblue: #005e85;
+$BNAlightBlue: #23abe0;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +8,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  background-color: $BNAblue;
+  color: white;
 }
