--- a/src/app/Game/Game.module.scss
+++ b/src/app/Game/Game.module.scss
@@ -47,7 +47,7 @@ $BNAlightBlue: #018EDD;
                 }
                 span{
                     font-weight: bold;
-                    font-size: 3rem;
+                    font-size: 4dvw;
                     margin-right: 25%;
                     margin-bottom: 3%;
                 }
@@ -55,13 +55,13 @@ $BNAlightBlue: #018EDD;
         }
     }
     h2{
-        margin: -30px 0 20px;
+        margin: -1.5dvh 0 1dvh;
         width: 100%;
         text-align: center;
-        font-size: 2rem;
+        font-size: 1.65dvh;
     }
     .table{
-        margin-top: -60px;
+        margin-top: -3dvh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -75,7 +75,7 @@ $BNAlightBlue: #018EDD;
             grid-template-columns: repeat(3, 1fr);
             width: 100%;
             aspect-ratio: 3/1;
-            margin-bottom: -40px;
+            margin-bottom: -2dvh;
         }
     }
 }
