--- a/src/components/Puzzle/Board/Board.module.scss
+++ b/src/components/Puzzle/Board/Board.module.scss
@@ -3,7 +3,7 @@ $BNAlightBlue: #018EDD;
 
 .border{
     border-radius: 10px;
-    border: 15px solid $BNAlightBlue;
+    border: 1.5dvw solid $BNAlightBlue;
     width: 85%;
     margin: 0 auto;
     .board{
