--- a/src/app/Game/Game.module.scss
+++ b/src/app/Game/Game.module.scss
@@ -6,14 +6,11 @@ $BNAlightBlue: #018EDD;
     flex-direction: column;
     align-items: center;
     //justify-content: center;
-    max-width: 1080px;
     margin: 0 auto;
     height: 100dvh;
     color: white;
     position: relative;
     overflow: hidden;
-    background: url(../../../public/assets/img/fondo-juego.png) no-repeat center;
-    background-size: cover;
     header{
         width: 100%;
         margin-top: 2dvh;
@@ -47,7 +44,7 @@ $BNAlightBlue: #018EDD;
                 }
                 span{
                     font-weight: bold;
-                    font-size: 4dvw;
+                    font-size: 2.3dvh;
                     margin-right: 25%;
                     margin-bottom: 3%;
                 }
@@ -77,5 +74,11 @@ $BNAlightBlue: #018EDD;
             aspect-ratio: 3/1;
             margin-bottom: -2dvh;
         }
+    }
+}
+
+@media screen and (min-device-aspect-ratio: 9/16){
+    .Page{
+        aspect-ratio: 9/16;
     }
 }
